nonprod-k8s/clk-auth/keycloak/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: my-auth
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
      - name: keycloak
        image: jboss/keycloak:10.0.0
        args: [-Dkeycloak.profile=preview, -Dkeycloak.profile.feature.upload_scripts=enabled, -Dkeycloak.profile.feature.token_exchange=enabled]
        resources:
          limits:
            memory: 800Mi
            cpu: "1.5"
          requests:
            memory: 512Mi
            cpu: "1"  
        ports:
        - containerPort: 8080
