nonprod-k8s/clk-auth/keycloak/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: my-auth
  labels:
    app: keycloak
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
  selector:
    app: keycloak
