nonprod-k8s/clk-auth/keycloak/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/enable-cors: "true"
  name: keycloak
  namespace: my-auth
spec:
  tls:
  - hosts:
    - "*.api.com"
    secretName: my-managed-api-tls
  rules:
    - host: sso-test.api.com
      http:
        paths:
          - path: /
            backend:
              serviceName: keycloak
              servicePort: 8080
